--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :gender, 'Gênero:' %>
     <%= f.collection_select :gender_id, Gender.all, :id, :name %>
 </div>
+<div class="field">
+<%= f.label :status, 'Status:' %>
+<%= f.check_box :status, { checked: @movie.launched? } %> Lançado
+</div>
 <div>
     <%= f.submit 'Salvar' %>
 </div>
