poster challenge activestorage

--- a/app/views/directors/show.html.erb
+++ b/app/views/directors/show.html.erb
@@ -16,6 +16,11 @@
 <h2> Filmes dirigidos por <%= @director.name%> </h2>
 <ul>
 <% @movies.each do |movie| %>
-    <li><%= link_to movie.title, movie_path(movie) %></li>
+    <li>
+    <% if movie.poster.attached? %>
+      <%= image_tag url_for(movie.poster), style: "width: 50px; height: auto;" %>
+    <% end %>
+    <%= link_to movie.title, movie_path(movie) %>
+    </li>
 <% end %>
 </ul>
