--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,5 +1,10 @@
 <%= link_to 'Editar filme', edit_movie_path %>
-
+<br>
+<br>
+<% if @movie.poster.attached? %>
+    <%= image_tag url_for(@movie.poster), style: "width: 200px; height: auto;" %>
+<% end %>
+<br>
 <h1> <%= @movie.title%> </h1>
 <dl>    
     <dd>
