--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,3 @@
-<h1> <%= link_to 'Gêneros', genders_path %> </h1>
-
-<h1> <%= link_to 'Diretores', directors_path %> </h1>
-
-<h1> <%= link_to 'Filmes', movies_path %> </h1>
+<br>
+<h4> Bem vindo ao Catálogo de Filmes! </h4>
+<h5> Clique em um dos links para começar. </h5>
