--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,22 +11,12 @@
   </head>
 
   <body>
-    <nav>
-      <ul>
-        <li>
-          <%= link_to 'Home', root_path%>
-        </li>
-        <li>
-          <%= link_to 'Cadastrar novo gênero', new_gender_path%>
-        </li>
-        <li>
-          <%= link_to 'Cadastrar novo diretor', new_director_path%>
-        </li>
-        <li>
-          <%= link_to 'Cadastrar novo filme', new_movie_path%>
-        </li>
-      </ul>
-    </nav>
+    <h1> <%= link_to 'Home', root_path%> | <%= link_to 'Filmes', movies_path %> | <%= link_to 'Gêneros', genders_path %> | <%= link_to 'Diretores', directors_path %> </h1>
+      <nav>
+        <h3> 
+        <%= link_to 'Adicionar gênero', new_gender_path%> | <%= link_to 'Adicionar diretor', new_director_path%> | <%= link_to 'Adicionar filme', new_movie_path%> 
+        </h3>
+      </nav>
     <%= yield %>
   </body>
 </html>
